--- a/mobileapp.html
+++ b/mobileapp.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>B-AID</title>
+  <title>B-Aid, the mobile app</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,10 +44,10 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><b><span class="whitecolor">About</span></b> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor"><b>
+        <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
           Projects</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -57,7 +57,7 @@
         </div>
       </li>
 	   <li class="nav-item active">
-        <a class="nav-link" href="index.html#projects"><span class="whitecolor"><b>Resume</b></span></a>
+        <a class="nav-link" href="index.html#projects"><span class="whitecolor">Resume</span></a>
       </li>
     </ul>
   </div>
@@ -76,7 +76,7 @@
           </div>
 
           <div class="col-lg-4 portfolio-info introbox">
-            <h3><b>PROJECT INFORMATION</b></h3>
+            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: Accessibility, Mobile Technology, User-Centered Design</li>
               <li><strong>User Base</strong>: Runners who are blind</li>
