--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -39,7 +39,10 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -93,14 +96,14 @@
 	<!-- ======= INTRODUCTION Details ======= -->
 	<section>
       <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title"><b>HELPING Emi</b></h2>
+	<h2 class="portfolio-title"><b>HELPING Santiago</b></h2>
 		  <div class ="row">
 		  <div class ="col-md-2">
 		  <img src="assets/img/Personal/avatar1.png" class="img-fluid avatar" alt="">
           </div>
 		  <div class="col-md-10">
 		  <p class="justified">
-            <span class = "introtext"> Meet <b>Emi</b>, a 38 year old runner who is <span>visually impaired. He wants a device that can help him detect obstacles while running. </span> </p>
+            <span class = "introtext"> Meet <b>Santiago</b>, a 38 year old runner who is <span>visually impaired. He wants a device that can help him detect obstacles while running. </span> </p>
 			<span class = "introtext"> His main problem is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, our team at the University of Maryland, Baltimore County decided to build a device for him. The project was done under the watchful eye of Dr.Ravi Kuber. </span> </p>
           </div>
 		</div>
@@ -112,10 +115,10 @@
       <div class="container" data-aos="fade-up">
           <div class="horizontalline1"></div>
 		  <div>
-          <h2 class="prototype-introduction" id="requirements"><b>So what are Emi's base requirements?</b></h2>
+          <h2 class="prototype-introduction" id="requirements"><b>So what are Santiago's base requirements?</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> Emi wants a device that relies on haptics and uses sensors to detect obstacles. He also wants it to be non-invasive and portable so that it does not hinder his run.</span> </p>
+            <span class = "introtext"> Santiago wants a device that relies on haptics and uses sensors to detect obstacles. He also wants it to be non-invasive and portable so that it does not hinder his run.</span> </p>
 		  <div class="horizontalline"></div>
 		</div> 
 	</section>
@@ -127,7 +130,7 @@
       <div class="container" data-aos="fade-up">
           <h2><b>Assumptions</b></h2> 
 		  <p class="justified">
-            <span class = "introtext"> We made some assumptions before the team started the whiteboarding process. Some of the assumptions varied from the runners like Emi running regularly, using tethers while running, using existing technology, finding technology usage difficult while running, etc.,</span> </p>
+            <span class = "introtext"> We made some assumptions before the team started the whiteboarding process. Some of the assumptions varied from the runners like Santiago running regularly, using tethers while running, using existing technology, finding technology usage difficult while running, etc.,</span> </p>
 		</div>
     </section>
 	
@@ -137,7 +140,7 @@
           <h2><b>Research Questions</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> Emi gave his requirements, now we had a job on our hands. The time had come to create a list of <span class="irqhighlight">initial research questions</span>. Each member of the team came up with list of research questions and compiled later.</span> </p>
+            <span class = "introtext"> Santiago gave his requirements, now we had a job on our hands. The time had come to create a list of <span class="irqhighlight">initial research questions</span>. Each member of the team came up with list of research questions and compiled later.</span> </p>
 			<p><span class="typed" data-typed-items= "Can the users effienciently look for the information they need after using our prototype?, Can the prototype clearly distinguish obstacles in each path?, Can the prototype be tested on any given terrain yielding efficient results?, Would the users be able to connect and run the setup successfully should there be a reassembly?, How easily can the prototype be worn by the prospective users"></span></p>
 		  </div> 
     </section>
@@ -154,7 +157,7 @@
           </div>
 		  <div class="col-md-8">
 		  <p class="justified">
-            <span class = "researchtext"> With the research questions now generated, our team sat together for round table discussions and whiteboarding. Keeping Emi's initial requirements in mind, we came up with a defined process, and a set of scenarios to aid future work. 	</span> </p>
+            <span class = "researchtext"> With the research questions now generated, our team sat together for round table discussions and whiteboarding. Keeping Santiago's initial requirements in mind, we came up with a defined process, and a set of scenarios to aid future work. 	</span> </p>
 		</div>
 			</div>
     </section>
@@ -166,7 +169,7 @@
 		  
 		  <div class="col-md-8">
 		  <p class="justified">
-            <span class = "researchtext"> Let us put ourselves in Emi's shoes, shall we? The team enacted various scenarios involving individuals who are blind and running while coming up with different solutions in addition to the ones generated while whiteboarding.	</span> </p>
+            <span class = "researchtext"> Let us put ourselves in Santiago's shoes, shall we? The team enacted various scenarios involving individuals who are blind and running while coming up with different solutions in addition to the ones generated while whiteboarding.	</span> </p>
 		</div>
 		<div class ="col-md-4">
 		  <img src="assets/img/Personal/rolestorming.jpg" class="avatar3" alt="">
@@ -188,7 +191,7 @@
           <h2><b>Research</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> To come up with a working prototype for Emi, we had to go in depth about the subject, do some qualitative research and <span class="irqhighlight"> gain useful insights.</span>.</p>
+            <span class = "introtext"> To come up with a working prototype for Santiago, we had to go in depth about the subject, do some qualitative research and <span class="irqhighlight"> gain useful insights.</span>.</p>
 			<h4><b>User Interviews </b></h4>
 			<div class ="row">
 			<div class ="col-md-4">
@@ -268,7 +271,7 @@
 		  <img src="assets/img/Personal/Build.jpg" class="avatar7" alt="">
           </div>
 		  <p class="justified">
-            <span class = "introtext"> We were now at a stage where we could build the prototype for Emi. We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<span class="irqhighlight"><b> we decided to go with a RUNNING BELT. </b></span>  As one of the two prototype developers on the team, I set myself a deadline to get everything up and running. Within two months, it was ready for review.</p>
+            <span class = "introtext"> We were now at a stage where we could build the prototype for Santiago. We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<span class="irqhighlight"><b> we decided to go with a RUNNING BELT. </b></span>  As one of the two prototype developers on the team, I set myself a deadline to get everything up and running. Within two months, it was ready for review.</p>
 			<h4 class ="uppermargin"><b>Prototype</b></h4>
 			<div class ="row">
 		  <div class="col-md-6">
@@ -287,14 +290,14 @@
 	
 	<section>
       <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title"><b>Getting back to Emi, THE USP</b></h2>
+	<h2 class="portfolio-title"><b>Getting back to Santiago, THE USP</b></h2>
 		  <div class ="row">
 		  <div class ="col-md-2">
 		  <img src="assets/img/Personal/avatar2.png" class="img-fluid avatar" alt="">
           </div>
 		  <div class="col-md-10">
 		  <p class="justified">
-            <span class = "introtext">We were ready to show Emi the prototype. But what sets our prototype apart, and what makes it user oriented?  </span> </p>
+            <span class = "introtext">We were ready to show Santiago the prototype. But what sets our prototype apart, and what makes it user oriented?  </span> </p>
 			<h4><span class="irqhighlight2"> Unique Selling Points  </span></h4>
 			<span class = "introtext"> This low cost device consists of a variety of sensors to offer a wider detection range. The output works on haptics and can be used by deaf-blind people as well. The users do not have to spend money on devices that are expensive and bear only one sensor as this prototype is a handy alternative.  </span> </p>
           </div>
