--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -45,7 +45,10 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -82,9 +85,9 @@
             <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
-              <li><strong>User Base</strong>: Students, Faculty, and .</li>
+              <li><strong>User Base</strong>: Students, Faculty, General Audience</li>
               <li><strong>Project Timeline</strong>: </li>
-              <li><strong>Team Members</strong>: Finance Specialists, Web Developers, Business Specialists </a></li>
+              <li><strong>Team Members</strong>: Finance Specialists, Web Developers, Business Associates </a></li>
 			  <li><strong>My Role</strong>: User Researcher and Web developer</a></li>
             </ul>
 
@@ -120,6 +123,22 @@
 	</div>
 	</section>
   </main><!-- End #main -->
+  
+   <footer id="footer">
+    <div class="container">
+      <h3>Anirudh Nagraj</h3>
+      <p>Come say a hi! 👋</p>
+      <div class="social-links">
+        <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
+      </div>
+      <div class="copyright">
+        <strong><span>Curated with a lot of thought and passion </span></strong>.
+      </div>
+    </div>
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
   <div id="preloader"></div>
