--- a/mobileapp.html
+++ b/mobileapp.html
@@ -44,7 +44,10 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -333,16 +336,15 @@
     </section>
   </main><!-- End #main -->
   
-  <footer id="footer">
+   <footer id="footer">
     <div class="container">
       <h3>Anirudh Nagraj</h3>
       <p>Come say a hi! 👋</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
       <div class="copyright">
         <strong><span>Curated with a lot of thought and passion </span></strong>.
