--- a/index.html
+++ b/index.html
@@ -321,11 +321,10 @@
       <h3>Anirudh Nagraj</h3>
       <p>Come say a hi! 👋</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
       <div class="copyright">
         <strong><span>Curated with a lot of thought and passion </span></strong>.
