--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -354,7 +354,7 @@
       <h3>Anirudh Nagraj</h3>
       <p>Come say a hi! 👋</p>
       <div class="social-links">
-        <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://twitter.com/Anirudh_Nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
