--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -55,7 +55,7 @@
         </div>
       </li>
 	   <li class="nav-item active">
-        <a class="nav-link" href="index.html#projects"><span class="whitecolor">Resume</span></a>
+        <a class="nav-link" href="index.html#resume"><span class="whitecolor">Resume</span></a>
       </li>
     </ul>
   </div>
@@ -84,7 +84,7 @@
             </ul>
 
             <p class="justified">
-             <b>TRIDENT</b> stands for Tri-Positional Detection and Navigational Technology. The key features of the system include enhanced awareness of surroundings, detection of obstacles above and below the waist, modes for long and short range detection and choice of output. These features have been determined from interviews conducted with blind joggers and runners
+             <b>TRIDENT</b> stands for Tri-Positional Detection and Navigational Technology. The key features of the system include enhanced awareness of surroundings, detection of obstacles above and below the waist, modes for long and short range detection and choice of output. These features have been determined from interviews conducted with blind joggers and runners.
             </p>
           </div>
 
@@ -104,7 +104,7 @@
 		  <div class="col-md-10">
 		  <p class="justified">
             <span class = "introtext"> Meet <b>Santiago</b>, a 38 year old runner who is <span>visually impaired. He wants a device that can help him detect obstacles while running. </span> </p>
-			<span class = "introtext"> His main problem is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, our team at the University of Maryland, Baltimore County decided to build a device for him. The project was done under the watchful eye of Dr.Ravi Kuber. </span> </p>
+			<span class = "introtext"> His main problem is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, our team at the University of Maryland, Baltimore County decided to build a device for him through the <span class="irqhighlight"> user centered approach </span>. The project was done under the watchful eye of Dr.Ravi Kuber. </span> </p>
           </div>
 		</div>
         </div>
