--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+		<li><a href="#tools"><i class='bx bxs-category-alt'></i><span>Tools</span></a></li>
 		<li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <!-- <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
       </ul>
@@ -75,7 +76,7 @@
             <img src="assets/img/Personal/Main Image.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UX Research &amp; Accessibility</h3>
+            <h3> Research &amp; Accessibility</h3>
             <p class="justified">
               I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience and set reference pointers for future projects related to accessibility and navigation in low-and middle income countries. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ;only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
             </p>
@@ -85,7 +86,41 @@
       </div>
     </section><!-- End About Section -->
 
-    <section></section>
+    <section id="tools">
+      <div class="container" data-aos="fade-up">
+	  <div class="section-title">
+          <h2>TOOLS I USE</h2>
+          <p> Below are some of the tools I use for my research </p>
+        </div>
+		<div class="row">
+		  <div class ="col-md-3">
+		<img src="assets/img/Personal/Airtable.png" class="avatar10" alt="">
+		</div>
+		 <div class ="col-md-3">
+		<img src="assets/img/Personal/Kanban.png" class="avatar10" alt="">
+		</div>
+		<div class ="col-md-3">
+		<img src="assets/img/Personal/Figma Logo.png" class="avatar11" alt="">
+		</div>
+		<div class ="col-md-3">
+		<img src="assets/img/Personal/Google Meet.png" class="avatar10" alt="">
+		</div>
+		<div class ="col-md-3">
+		<img src="assets/img/Personal/Miro.png" class="avatar10" alt="">
+		</div>
+		<div class ="col-md-3">
+		<img src="assets/img/Personal/GoogleAnalytics.png" class="avatar10" alt="">
+		</div>
+		<div class ="col-md-3">
+		<img src="assets/img/Personal/Office.png" class="avatar10" alt="">
+		</div>
+		<div class ="col-md-3">
+		<img src="assets/img/Personal/pen and paper.jpg" class="avatar10" alt="">
+		</div>
+        </div>
+		</div>
+
+	</section>
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
@@ -220,11 +255,9 @@
 	 <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>Resume</h2>
-        </div>
-
+		  
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
