--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Hi! 🙏 I am Anirudh Nagraj</h1>
-      <p>I'm a <span class="typed" data-typed-items="Researcher, Problem Solver, Thinker"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Mixed Method Researcher, Problem Solver"></span></p>
       
     </div>
   </section><!-- End Hero -->
