--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="section-title">
           <h2>A LITTLE ABOUT MYSELF</h2>
           <p class ="justified">
-		  I am Anirudh Nagraj, an aspiring User Experience Professional. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing. </p>
+		  I am Anirudh Nagraj, a keen eyed UX guy. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing. </p>
         </div>
 
         <div class="row">
