--- a/mobileapp.html
+++ b/mobileapp.html
@@ -82,7 +82,7 @@
             <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: Accessibility, Mobile Technology, User-Centered Design</li>
-              <li><strong>User Base</strong>: Runners who are blind</li>
+              <li><strong>User Base</strong>: Individuals who are blind</li>
               <li><strong>Project Timeline</strong>: 1 year </li>
               <li><strong>Team Members</strong>: Solo Project</a></li>
 			  <li><strong>My Role</strong>: UX researcher and UX designer</a></li>
@@ -314,7 +314,7 @@
           </div>
 		  <div class="col-md-8">
 		  <p class="justified">
-            <span class = "introtext">What can we expect from the pror </span> </p>
+            <span class = "introtext">What can we expect from the prototype </span> </p>
 			<h4><span class="irqhighlight2"> IMPACT </span></h4>
 			<span class = "introtext"> From the insights and the prototype developed, I am confident that</span> </p>
 			<ul>
