--- a/mobileapp.html
+++ b/mobileapp.html
@@ -189,6 +189,20 @@
 			  </div>
             </div>
 			
+		<section id="insights">
+      <div class="container" data-aos="fade-up">
+          <h2 class="headingtitle"><b>Insights</b></h2>
+			<ul class="listitems">
+				<li>Information: Participants want information to be presented to them directly via the application or require fellow human to tell them navigational directions.</li>
+				<li>Functions: Participants look for functions to be ‘visible’ – easily identifiable.</li>
+				<li>Specific Information: Look out for information like Bus Route Information, Bus Stop names, nearby accessible stops, etc.,</li>
+				<li>Click Rate: Participants mentioned that they preferred minimum clicks and maximum utility for each section of the application.</li>
+				<li>Content: Participants mentioned that they do not want information overload when it comes to the navigation application.</li>
+				<li>Technology vs Human-assistance: Participants want timely assistance when it comes to navigation and other activities that tend to make them take assistance.</li>
+			</ul>
+	  </div>
+    </section>
+			
 		<h4 class="uppermargin"><b>Field Observations </b></h4>
 		<div class ="row">
 		<div class ="col-md-4">
