--- a/mobileapp.html
+++ b/mobileapp.html
@@ -188,7 +188,7 @@
 			  <blockquote> <i>I use google maps a lot. I also use Lazarillo to help me within the walls of the city. I like applications where the functions are easily visible</i></blockquote>
 			  </div>
             </div>
-			
+		</section>
 		<section id="insights">
       <div class="container" data-aos="fade-up">
           <h2 class="headingtitle"><b>Insights</b></h2>
@@ -246,6 +246,7 @@
 		<div class ="col-md-4">
 		<p class="justified">
             <span class = "researchtext"> Storyboards changed my perception of the functionalities that can be implemented in my project. I realized that my application cannot have all the functionalities that I desire because of constraints indicated by the storyboards. The storyboards helped me synthesize the content and match my thinking with the constraints. </span> </p>
+		</div>
 		</div>
 		</div>
     </section>
