--- a/mobileapp.html
+++ b/mobileapp.html
@@ -201,8 +201,9 @@
 				<li>Technology vs Human-assistance: Participants want timely assistance when it comes to navigation and other activities that tend to make them take assistance.</li>
 			</ul>
 	  </div>
-    </section>
-			
+	  </section>
+		<section>
+		<div class="container">
 		<h4 class="uppermargin"><b>Field Observations </b></h4>
 		<div class ="row">
 		<div class ="col-md-4">
