--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Anirudh Nagraj</h4>
-              <p><em> Innovative and research driven individual with 2 years of corporate experience.Keen to work with the results obtained from thorough user research to build better products.</em></p> 
+              <p><em> Innovative and research driven individual with two years of corporate experience. Keen to work with the results obtained from thorough user research to build better products.</em></p> 
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -245,15 +245,15 @@
 			<h3 class="resume-title">Skills</h3>
             <div class="resume-item">
               <h4>USER RESEARCH</h4>
-			  <h6>Contextual Inquiry, User Interviews, Qualitative Coding, Usability Testing, Heuristic Evaluations, Affinity Mapping, Participatory Design</h6>
+			  <h6>Contextual Inquiry, User Interviews, Qualitative Coding, Usability Testing, Heuristic Evaluations, Affinity Mapping, Participatory Design, A/B Testing, Fly on the Wall, User Journeys, Dairy Studies, Card Sorting, Surveys </h6>
              </div>
             <div class="resume-item">
               <h4>UX DESIGN</h4>
-			  <h6>Storyboards, Wireframing, User Journeys, Information Architecture, Brainstorming, Prototyping, User Personas, Whiteboarding, Interaction Design, JTBD Framework, Accessibility</h6>
+			  <h6>Storyboards, Wireframing,  Information Architecture, Brainstorming, Prototyping, User Personas, Whiteboarding, Interaction Design, JTBD Framework, Accessibility, User Centered Design</h6>
             </div>
 			<div class="resume-item">
               <h4>TOOLS</h4>
-			  <h6>Adobe XD, Figma, InVision, Sketch, Balsamiq Mockups, Adobe Photoshop, JIRA, Airtable</h6>
+			  <h6>Adobe XD, Figma, InVision, Sketch, Balsamiq Mockups, Adobe Photoshop, JIRA, Airtable, Survey Monkey, Google Suite, Miro</h6>
             </div>
 			<div class="resume-item">
               <h4>PROGRAMMING</h4>
@@ -275,22 +275,21 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Web Developer , College Of Engineering and Technology - Shared Services Center</h4>
+              <h4>User Researcher - Shared Services Center, University of Maryland, Baltimore County  </h4>
               <h5>2020 - Present</h5>
               <p><em>University of Maryland, Baltimore County </em></p>
               <ul>
-                <li>Lead user researcher of the COEIT SSC team. Responsible for carrying out methodologies like user interviews, contextual inquiries, heuristic evaluations etc., to improve the overall usability.</li>
-                <li>Using Performance metrics and Google Analytics to track the number of users. Use collected data to incorporate changes to increase audience flow. </li>
-                <li>Employ HTML, CSS, JavaScript, integrating with Kanban to track project tasks and deliverables. </li>
-                <li>Airtable is used for data aggregation and analysis.</li>
+                <li>Lead all research for the Shared Services Team of the University of Maryland, Baltimore County.</li>
+                <li>Plan, collect, analyze, and share qualitative and quantitative data through mixed methods approach, ensuring that the team can choose user-centric solutions. Perform usability tests to evaluate the performance of the current website.  </li>
+                <li>Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and help aid the redesign to increase the number of users visiting and the overall usability.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>GRADUATE RESEARCH ASSISTANT </h4>
+              <h4>GRADUATE RESEARCH ASSISTANT (Acessibility)</h4>
               <h5>2019-2020</h5>
               <p><em>University of Maryland, Baltimore County</em></p>
               <ul>
-                <li>Investigated the navigational habits of individuals who are blind in low- and medium-income countries and drew insights from the various findings based on interviews to provide references for future assistive technologies in the navigational space.</li>
+                <li>Investigated the navigational habits of individuals who are blind in low- and medium-income countries and drew insights from the various findings based on interviews to provide references for the design of future assistive technologies in the navigational space.</li>
               </ul>
             </div>
 			            <div class="resume-item">
@@ -298,9 +297,9 @@
               <h5>2017 - 2019</h5>
               <p><em> LTI (A Larsen and Toubro Group Company), Bangalore, India</em></p>
               <ul>
-                <li>I have worked with multiple clients of LTI (a Larsen and Toubro group company) in a cross-functional setup with knowledge of Adobe Experience Manager (a web content management tool) to create interactive web applications in the insurance domain. </li>
-                <li>Used HTML, CSS, JavaScript ,SQL, AJAX to aid the integration of several features of the application. </li>
-                <li>Responsible for the quality delivery of product line items on a timely basis incorporating the AGILE method of software development. </li>
+                <li>Collaborated with multiple clients of LTI (a Larsen and Toubro group company) in a cross-functional setup with the working knowledge of Adobe Experience Manager (a web content management tool) and implemented front-end technologies (HTML, JavaScript, CSS, AJAX) to create a web-based insurance portal. </li>
+                <li>The portal enables users to perform quotation related operations and track the data over a period.  </li>
+                <li>Before development, I was a part of the team that conducted generative research on the product to find potential solutions and opportunities. </li>
               </ul>
             </div>
           </div>
