--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               </ul>
             </div>
 			            <div class="resume-item">
-              <h4>SOFTWARE ENGINEER [DEV|INSURANCE]</h4>
+              <h4>SOFTWARE ENGINEER</h4>
               <h5>2017 - 2019</h5>
               <p><em> LTI (A Larsen and Toubro Group Company), Bangalore, India</em></p>
               <ul>
