--- a/mobileapp.html
+++ b/mobileapp.html
@@ -308,9 +308,9 @@
 		</div>
 		</div>
 		<h6 class="uppermargin" style="color:blue;"><b>Function Screens #1</b></h6>
-		<img src="assets/img/Personal/Medium Connect.png" class="avatar8" alt="">
+		<img src="assets/img/Personal/MediumConnect.PNG" class="avatar8" alt="">
 		<h6 class="uppermargin" style="color:blue;"><b>Function Screen #2</b></h6>
-		<img src="assets/img/Personal/Video Assistance.png" class="avatar8" alt="">
+		<img src="assets/img/Personal/VideoAssistance.PNG" class="avatar8" alt="">
 		<div class="background">
 		<h4 class="uppermargin"><b>Prototype</b></h4>
 		<p class="justified">
