--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -56,7 +56,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="navigational-aid.html">Trident</a>
-          <a class="dropdown-item" href="coeit-ssc.html">COEIT SSC</a>
+          <a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
 		  <a class="dropdown-item" href="mobileapp.html">B-AID</a>
         </div>
       </li>
