--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
             <p class="justified">
               I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience and set reference pointers for future projects related to accessibility and navigation in low-and middle income countries. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ;only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
             </p>
+			
+			<p class="justified">I am an avid soccer fan, coffee lover and an admirer of nature. When idle, books offer a place of solace for me.  Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time.
+			</p>
           </div>
         </div>
 
