--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -255,12 +255,16 @@
       <div class="container" data-aos="fade-up">
           <h2 class="headingtitle"><b>SOME INSIGHTS</b></h2>
 			<ul class="listitems">
-				<li>Users cannot use the cane while running.</li>
-				<li>Multiple Obstacle detection is preferred.</li>
-				<li>Users want a non-intrusive device.</li>
-				<li>Users want a device that is multimodal.</li>
-				<li>Users would like the device to tell them about the obstacle well in advance.</li>
-				<li>Want something that is portable and lightweight.</li>
+				<li>Multiple obstacle detection:  Participants want an array of obstacles to be detected and not just a single obstacle.</li>
+				<li>A non-intrusive device that is multimodal: Participants do not want a device that impedes them in any way either physically or mentally in any way while running</li>
+				<li>Presentation of multiple haptic feedback: Participants are looking at receiving an array of feedback in the form of haptics while approaching an obstacle.
+</li>
+				<li>Detection of obstacles: Participants look forward to learning about the obstacle from a short distance away.
+</li>
+				<li>Weight Constraints: Participants do not want to carry something heavy while running as it impedes their run.
+</li>
+				<li>Terrain: Participants want the device to work in multiple terrains, and not just track and field.
+</li>
 			</ul>
 	  </div>
     </section>
