--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -241,11 +241,11 @@
         
 		<h4 class="uppermargin"><b>Scenario Development</b></h4>
 			<span class = "introtext"> We developed a detailed scenario to ensure that the major situations are covered and the prototype addresses all of them. </span></p>
-			<img src="assets/img/Personal/Scenario.jpg" class="avatar6" alt="">
+			<img src="assets/img/Personal/Scenario.jpg" class="avatar6 zoom" alt="">
 		  
 		  <h4 class="uppermargin"><b>Affinity Diagramming</b></h4>
 			<span class = "introtext"> Once we had all the data points ready, the team sat down and created an affinity diagram to draw themes and prioritize them. Collaboration was done on a tool called <span class ="irqhighlight">MIRO </span>. </span></p>
-          <img src="assets/img/Personal/Affinity diagram.jpg" class="avatar7" alt="">
+          <img src="assets/img/Personal/Affinity diagram.jpg" class="avatar7 zoom" alt="">
 		  </div>
 		</div> 
 	  </div>     
