--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
 			
 			<h3 class="resume-title">Skills</h3>
             <div class="resume-item">
-              <h4>USER RESEARCH</h4>
-			  <h6>Contextual Inquiry, User Interviews, Qualitative Coding, Usability Testing, Heuristic Evaluations, Affinity Mapping, Participatory Design, A/B Testing, Fly on the Wall, User Journeys, Dairy Studies, Card Sorting, Surveys </h6>
+              <h4>METHODOLOGIES</h4>
+			  <h6>Contextual Inquiry, User Interviews, Qualitative Coding, Usability Testing, Heuristic Evaluations, Affinity Mapping, Participatory Design, A/B Testing, research reports, mind maps, User Journeys, Dairy Studies, Card Sorting, Surveys </h6>
              </div>
             <div class="resume-item">
               <h4>UX DESIGN</h4>
@@ -256,11 +256,11 @@
             </div>
 			<div class="resume-item">
               <h4>TOOLS</h4>
-			  <h6>Adobe XD, Figma, InVision, Sketch, Balsamiq Mockups, Adobe Photoshop, JIRA, Airtable, Survey Monkey, Google Suite, Miro</h6>
+			  <h6>Adobe XD, Figma, InVision, Sketch, Balsamiq Mockups, Adobe Illustrator, JIRA, AirTable, Survey Monkey, Google Suite, Miro</h6>
             </div>
 			<div class="resume-item">
-              <h4>PROGRAMMING</h4>
-			  <h6>HTML, CSS, JavaScript</h6>
+              <h4>PROGRAMMING and PROCESS</h4>
+			  <h6>HTML, CSS, JavaScript, Agile, Lean, Kanban</h6>
             </div>
 		  
 		  <h3 class="resume-title">Honors and Awards</h3>
@@ -282,13 +282,13 @@
               <h5>2020 - Present</h5>
               <p><em>University of Maryland, Baltimore County </em></p>
               <ul>
-                <li>Lead all research for the Shared Services Team of the University of Maryland, Baltimore County.</li>
-                <li>Plan, collect, analyze, and share qualitative and quantitative data through mixed methods approach, ensuring that the team can choose user-centric solutions. Perform usability tests to evaluate the performance of the current website.  </li>
-                <li>Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and help aid the redesign to increase the number of users visiting and the overall usability.</li>
+                <li>Drive all research related activities for the Shared Services Team of the University of Maryland, Baltimore County [CLIENT]. </li>
+                <li>Collect, analyze, and share qualitative and quantitative data through a mixed methods approach. Perform usability tests to evaluate the performance of the current product. Communicating the findings to the business team to help increase revenue. </li>
+                <li>Currently Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and aid the redesign to reduce bounce rates, help improve the page visits, and the overall usability.	</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>GRADUATE RESEARCH ASSISTANT (Acessibility)</h4>
+              <h4>GRADUATE RESEARCH ASSISTANT</h4>
               <h5>2019-2020</h5>
               <p><em>University of Maryland, Baltimore County</em></p>
               <ul>
@@ -296,14 +296,14 @@
               </ul>
             </div>
 			            <div class="resume-item">
-              <h4>SOFTWARE ENGINEER</h4>
+              <h4>SOFTWARE ENGINEER (UI/UX)</h4>
               <h5>2017 - 2019</h5>
               <p><em> LTI (A Larsen and Toubro Group Company), Bangalore, India</em></p>
 			  <br>
               <ul>
                 <li>Collaborated with multiple clients of LTI (a Larsen and Toubro group company) in a cross-functional setup with the working knowledge of Adobe Experience Manager (a web content management tool) and implemented front-end technologies (HTML, JavaScript, CSS, AJAX) to create a web-based insurance portal. </li>
                 <li>The portal enables users to perform quotation related operations and track the data over a period.  </li>
-                <li>Before development, I was a part of the team that conducted generative research on the product to find potential solutions and opportunities. </li>
+                <li>Before development, I was a part of the team that conducted generative research on the product to find potential solutions and opportunities that can maximize revenue and profits. </li>
               </ul>
             </div>
           </div>
