--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="section-title">
           <h2>A LITTLE ABOUT MYSELF</h2>
           <p class ="justified">
-		  I am Anirudh Nagraj, a keen eyed UX guy. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing. </p>
+		  I am Anirudh Nagraj, a keen eyed UX guy. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product. </p>
         </div>
 
         <div class="row">
@@ -75,11 +75,12 @@
             <img src="assets/img/Personal/Main Image.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3> Research &amp; Accessibility</h3>
+            <h3> What sets me apart?</h3>
             <p class="justified">
-              I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience and set reference pointers for future projects related to accessibility and navigation in low-and middle income countries. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ;only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
+              By leveraging user research techniques to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the value of the product at hand. Through strategizing and working on the insights generated, I am sure that the users will have a positive user experience. Having worked in software development in UI/UX, I know what it means to wear the developers hat while designing a product. One can say that without user research, a product can be developed. But,a good product needs user research before development. For me, user research is not something that comes before designing. It is quintessential in every step of the product life cycle. Data tells me the numbers but they often don't tell me the reason.  Methods like interviews tell me the reason, but they don't project the numbers. I prefer working with both. 
             </p>
-			
+			<div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3> Other Interests</h3>
 			<p class="justified">I am an avid soccer fan, coffee lover and an admirer of nature. When idle, books offer a place of solace for me.  Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time.
 			</p>
           </div>
